# webgis_api

./: README.md  database.py  main.py  pyproject.toml
Models/: pessoa.py  usuarios
Schemas/: usuariosSchemas
app/file/: file_controller.py  file_model.py
app/person/: person_model.py
app/user/: user_controller.py  user_model.py  user_repository.py  user_service.py
